<resources>
    <string name="app_name">MyCellar</string>
    <string name="wine_name_req">Wine Name <font color='#FF0000'>*</font></string>
    <string name="wine_type">Type of wine <font color='#FF0000'>*</font></string>
    <string name="offered_by">Offered by</string>
    <string name="quantity_req">Quantity <font color='#FF0000'>*</font></string>
    <string name="quantity">Quantity</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="view_cellar">Show cellar</string>
    <string name="wine_name">Wine name</string>
    <string name="wine_list_fragment_title">{wineType}</string>
    <string name="dialog_confirmation_title">Confirmation</string>
    <string name="dialog_confirmation_message">Are you sure you want to delete this item?</string>
    <string name="dialog_confirmation_positive">Yes</string>
    <string name="dialog_confirmation_negative">No</string>
    <string name="red_wine">Red wine</string>
    <string name="white_wine">White wine</string>
    <string name="rose_wine">Rosé wine</string>
    <string name="sparkling_wine">Sparkling wine</string>
    <string name="dessert_wine">Dessert wine</string>
    <string name="fortified_wine">Fortified wine</string>
    <string name="all">All</string>
</resources>