<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/label_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/wine_name_req"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_box_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textAutoComplete|textCapWords"
                android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/label_menu"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wine_type"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/label_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <AutoCompleteTextView
                android:id="@+id/drop_down_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/label_offered_by"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/offered_by"
            app:layout_constraintTop_toBottomOf="@id/label_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_box_offered_by"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textAutoComplete|textCapWords"
                android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/label_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/quantity"
            app:layout_constraintTop_toBottomOf="@id/label_offered_by"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_box_quantity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/save"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toBottomOf="@id/label_quantity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_delete"/>

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/delete"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toBottomOf="@id/label_quantity"
            app:layout_constraintStart_toEndOf="@id/btn_save"
            app:layout_constraintEnd_toEndOf="parent"/>
           

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>